--- a/index.qmd
+++ b/index.qmd
@@ -3,6 +3,7 @@ title: "Latest posts"
 description: ""
 listing:
   contents: posts
+  feed: true
   sort: "date desc"
   type: default
   categories: true
