different locations for subscription box

--- a/about.qmd
+++ b/about.qmd
@@ -1,6 +1,5 @@
 ---
 title: "About"
-description: "Your Neighborhood Scientist"
 image: TODO
 about:
   template: jolla
@@ -16,11 +15,10 @@ about:
     - icon: github
       text: Github
       href: https://github.com/ynscientist
-
+include-after-body: subscribe.html
 ---
 
 :::{#about}
-
 TODO About this blog
-
 :::
+
